src/static/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*Your Custom CSS Goes here*/

h1 {
  @apply text-4xl font-black lg:text-7xl;
}

h2 {
  @apply font-black uppercase;
  font-size: 2.25rem;
  letter-spacing: 0.16px;
}

h3 {
  font-size: 1.125rem;
  letter-spacing: 0.18px;
  line-height: 24px;
}

.yellow-triangle-corner {
  width: 0;
  height: 0;
  border-top: 117px solid #ffe67b;
  border-right: 117px solid transparent;
  position: absolute;
  margin-left: 5px;
  margin-top: 5px;
}

.orange-triangle-corner {
  width: 0;
  height: 0;
  border-top: 117px solid #e27c37;
  border-right: 117px solid transparent;
  position: absolute;
  margin-left: 5px;
  margin-top: 5px;
}

.fs-logo {
  background-image: url(/static/img/usfs_partner_logo.jpg);
  display: block;
  height: 120px;
  width: 120px;
  background-size: 110px;
  background-repeat: no-repeat;
  background-position: center;
}

.nfa-logo {
  background-image: url(/static/img/nfa.png);
  display: block;
  height: 110px;
  width: 110px;
  background-size: 100%;
  background-color: white;
  border-radius: 50%;
  border: 7px solid white;
  background-repeat: no-repeat;
  background-position: center;
}

.rei-logo {
  background-image: url(/static/img/rei_logo_transparent.png);
  display: block;
  height: 120px;
  width: 120px;
  background-size: 120px;
  background-repeat: no-repeat;
  background-position: center;
}

.ta-logo {
  background-image: url(/static/img/logo.svg);
  display: block;
  height: 77px;
  width: 120px;
  background-size: 90%;
  background-repeat: no-repeat;
  background-position: center;
}

.facebook-logo,
.instagram-logo {
  display: block;
  margin: 0 auto;
  width: 30px;
  height: 30px;
  background-size: contain;
  background-repeat: no-repeat;
}

.facebook-logo {
  background-image: url(/static/img/social/fb.svg);
}

.instagram-logo {
  background-image: url(/static/img/social/ig.svg);
}

.subscriber-background {
  background-image: url(/static/img/trees-sun.svg);
  background-repeat: no-repeat;
}

@media (min-width: 1024px) {
  .subscriber-background {
    background-position-y: top;
    background-size: 28%;
    background-position-x: calc(100% - 2rem);
  }
}

@media (max-width: 1024px) {
  .subscriber-background {
    background-position-x: calc(100% - 2rem);
  }
}

.go-button {
  height: 45px;
  text-align: center;
  width: 45px;
  line-height: 40px;
}

.absolute-go-button {
  height: 45px;
  text-align: center;
  width: 45px;
  line-height: 40px;
  bottom: 10px;
  position: absolute;
}

.offset-underline {
  text-decoration: underline;
  text-decoration-color: white;
  text-underline-offset: 0.4em;
}

.glide {
  position: relative;
  width: 100%;
  box-sizing: border-box;
}

.glide * {
  box-sizing: inherit;
}

.glide__track {
  overflow: hidden;
}

.glide__slides {
  position: relative;
  width: 100%;
  list-style: none;
  backface-visibility: hidden;
  transform-style: preserve-3d;
  touch-action: pan-Y;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
  display: flex;
  flex-wrap: nowrap;
  will-change: transform;
}

.glide__slides--dragging {
  user-select: none;
}

.glide__slide {
  width: 100%;
  height: 100%;
  flex-shrink: 0;
  white-space: normal;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-tap-highlight-color: transparent;
}

.glide__slide img {
  height: 365px;
  object-fit: cover;
}

.glide__slide a {
  user-select: none;
  -webkit-user-drag: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.splide__arrow--prev {
  display: none;
  right: 4em;
  width: 0;
  height: 0;
  top: 40%;
  position: absolute;
  z-index: 1000;
  transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
}

.splide__arrow--next {
  display: none;
  width: 0;
  height: 0;
  top: 40%;
  position: absolute;
  right: 4.5em;
  z-index: 1000;
}

.splide__arrow--next svg,
.splide__arrow--prev svg {
  display: none;
  stroke: rgb(255, 230, 123);
  fill: rgb(255, 230, 123);
}

.glide--swipeable {
  cursor: grab;
  cursor: -moz-grab;
  cursor: -webkit-grab;
}

.glide--dragging {
  cursor: grabbing;
  cursor: -moz-grabbing;
  cursor: -webkit-grabbing;
}

.glide--carousel {
  position: relative;
}

.glide__content_top,
.glide__content_bottom {
  position: absolute;
  color: white;
  width: inherit;
}

.glide__content_top {
  top: 3rem;
}

.glide__content_bottom {
  bottom: 3rem;
}

.hidden {
  display: none;
}

.selected-filter {
  background-color: rgb(255, 230, 123);
}

.mobile-container {
  width: inherit;
  margin-right: auto;
  margin-left: auto;
  padding-right: 1rem;
  padding-left: 1rem;
}

@media (min-width: 640px) {
  .mobile-container {
    max-width: 640px;
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (min-width: 768px) {
  .mobile-container {
    max-width: 768px;
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (min-width: 1024px) {
  .mobile-container {
    max-width: 1024px;
    padding-right: 3rem;
    padding-left: 3rem;
  }
}

@media (min-width: 1280px) {
  .mobile-container {
    max-width: 1280px;
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (min-width: 1536px) {
  .mobile-container {
    max-width: 1536px;
    padding-right: 3rem;
    padding-left: 3rem;
  }
}

.places-table tr:hover {
  background-color: #ffe67b;
  color: #02502f;
}

.center-container {
  position: absolute;
  text-align: center;
  width: 100vw;
  margin-left: 0;
  padding-left: 0;
  text-shadow: 1px 1px black;
}

.blog .prose h2 {
  text-transform: initial;
  margin-top: 0;
  margin-bottom: 1rem;
}

.blog .prose {
  max-width: initial;
}

.hiddenscrollbar {
  margin-bottom: 40px;
  overflow-y: scroll;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
}
.hiddenscrollbar::-webkit-scrollbar {
  /* WebKit */
  width: 0;
  height: 0;
}

